// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": Object {
      "following": "record(0)",
    },
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(2)",
    "handle": "carol.test",
    "viewer": Object {
      "followedBy": "record(2)",
      "following": "record(1)",
    },
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "viewer": Object {
      "followedBy": "record(4)",
      "following": "record(3)",
    },
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": Object {
      "following": "record(0)",
    },
  },
]
`;
